moidify col list

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col">
                 <div class="list-group">
                     <a type="button" href="Clase-05-06/calculadora.html" class="list-group-item list-group-item-action" aria-current="true">
                       Calculadora
