--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <div class="row">
             <div class="col">
                 <div class="list-group">
-                    <a type="button" href="Clase-05-06/calculadora.html" class="list-group-item list-group-item-action" aria-current="true">
+                    <a type="button" href="Clase-05-06/pages/calculadora.html" class="list-group-item list-group-item-action" aria-current="true">
                       Calculadora
                     </a>
-                    <a type="button" href="./Clase-05-06/enviar-datos.html" class="list-group-item list-group-item-action">enviar Datos</a>
+                    <a type="button" href="./Clase-05-06/pages/enviar-datos.html" class="list-group-item list-group-item-action">enviar Datos</a>
                    
                   </div>
             </div>
@@ -46,5 +46,5 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    <script src="logica.js"></script>
+    <script src="./Clase-05-06/js/logica.js"></script>
 </html>
