--- a/Clase-05-06/pages/calculadora.html
+++ b/Clase-05-06/pages/calculadora.html
@@ -25,5 +25,11 @@
           </div>
         </div>
     </nav>
-</body>
+
+    <h1 id="bienvenida"></h1>
+
+
+    
+  </body>
+  <script src="../js/logica.js"></script>
 </html>
