--- a/Clase-05-06/pages/localStorage.html
+++ b/Clase-05-06/pages/localStorage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">OzKr Sierra</a>
+          <a class="navbar-brand" href="../pages/selectores.html">OzKr Sierra</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -18,12 +18,14 @@
             <ul class="navbar-nav">
         
               <li class="nav-item">
-                <a class="nav-link" href="#">Enviar Datos</a>
+                <a class="nav-link" href="#">Local Storage</a>
               </li>
         
             </ul>
+            <label for="" id="titulo"></label>
           </div>
         </div>
     </nav>
+    <script src="../js/storage.js"></script>
 </body>
 </html>
