--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
                   <a href="./Clase-05-06/pages/selectores.html" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
+              <div class="card mt-5" style="width: 18rem;">
+                <img src="./Clase-05-06/assets/banner.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Ejercicio 3</h5>
+                  <p class="card-text">Local Storage</p>
+                  <a href="./Clase-05-06/pages/localStorage.html" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
             </div>
        
 
