agregue mi nombre en un h1

--- a/Clase-26-07-24/index.html
+++ b/Clase-26-07-24/index.html
@@ -58,6 +58,8 @@
             <h1 id="total"></h1>
           <button type="button" class="btn btn-primary" onclick="calcularTotal()">Total</button>
         </form>
+
+        <h1>Oscar Sierra</h1>
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
