--- a/Clase-26-07-24/index.html
+++ b/Clase-26-07-24/index.html
@@ -60,6 +60,8 @@
         </form>
 
         <h1>Oscar Sierra</h1>
+        <h1>Otra cosa</h1>
+        <h1>Otra cosa</h1>
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
